puffersoft/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: frontend
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: www.dreggystore.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  websvc
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name:  websvc
                port:
                  number: 80
          - path: /puffersoft
            pathType: Prefix
            backend:
              service:
                name:  websvc
                port:
                  number: 80
