puffersoft/website.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-1
  namespace: frontend
spec:
  ingressClassName: controller-traefik
  rules:
  - http:
      paths:
      - path: /puffersoft
        pathType: Prefix
        backend:
          service:
            name: websvc
            port:
              number: 80
